--- a/etc/i3status.conf
+++ b/etc/i3status.conf
@@ -7,6 +7,7 @@
 # If the above line is not correctly displayed, fix your editor first!
 
 general {
+	output_format = "i3bar"
         colors = true
         interval = 1
 }
@@ -14,6 +15,7 @@ general {
 order += "cpu_temperature 0"
 order += "disk /"
 order += "disk /home"
+order += "disk /mnt/big_boy"
 order += "wireless _first_"
 order += "battery 0"
 order += "load"
@@ -48,4 +50,8 @@ disk "/" {
 
 disk "/home" {
         format = "%avail"
+}
+
+disk "/mnt/big_boy" {
+	format = "%avail"
 }
