--- a/etc/i3status.conf
+++ b/etc/i3status.conf
@@ -13,6 +13,7 @@ general {
 }
 
 order += "cpu_temperature 0"
+order += "memory"
 order += "disk /"
 order += "disk /home"
 order += "disk /mnt/big_boy"
@@ -45,13 +46,17 @@ load {
 }
 
 disk "/" {
-        format = "%avail"
+        format = "/ %used/%total"
 }
 
 disk "/home" {
-        format = "%avail"
+        format = "/home %used/%total"
 }
 
 disk "/mnt/big_boy" {
-	format = "%avail"
+	format = "/mnt/big_boy %used/%total"
+}
+
+memory {
+        format = "Memory: %used/%total"
 }
